--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
     <a href="#" class="whatsapp-btn" title="Fale conosco">
         <i class="fab fa-whatsapp"></i>
     </a>
+    <script type="text/javascript" src="https://lp.optibody.online/track.js?rtkcmpid=697395880927e612ddb8744b"></script>
     <script src="/js/main.js"></script>
 </body>
+
 </html>
